--- a/pages/pk/findSomeOne/findSomeOne.wxml
+++ b/pages/pk/findSomeOne/findSomeOne.wxml
@@ -13,29 +13,28 @@
                         <view class="css b-white br-20 z4">
 
                                         <view class="rbc pl-3vw pr-3vw pb-30 pt-30 b-line" >
+                                            <navigator class="rcc" hover-class="none" url="/pages/pk/userPublishPost/userPublishPost?userId={{findUser.user.userId}}">
                                                 <view class="rcc" >
-                                                    
                                                                 <view class="rcc">
                                                                     <view class="rcc pr-10">
                                                                         <image class="rcc w-50 h-50 br-5 " src="{{findUser.user.imgUrl}}" mode="aspectFill"></image>
                                                                     </view>
                                                                 </view> 
-                                                    
-                                                
                                                 </view>
                                                 
-                                                <view class="cas" style="flex:1">
-                                                    <view class="css"> 
+                                                <view class="cas">
+                                                    <view class="css w-300"> 
                                                         <view class="rus line-1-start fs-30 fw-650" >{{findUser.user.userName}}</view>
                                                     </view>
                                                 </view>
-                               
+                                            </navigator>
+
+                                            <view class="rcc">
                                                 <button open-type="share" class="rcc b-white message" style="width:50rpx;height:50rpx" data-findid="{{findUser.findId}}" data-pkname="{{findUser.pkName}}" data-url="{{findUser.img1?findUser.img1:findUser.user.imgUrl}}">
                                                     <view class="rcc ">
                                                         <image class="rcc w-50 h-50 " mode="aspectFit" src="/images/share1.png"></image>
                                                     </view>
                                                 </button>
-                                                    
                                                 <view class="w-70"></view>         
                                                 <navigator  class="rcc " hover-class="none" url="/pages/pk/userCard/userCard?userId={{findUser.user.userId}}">
                                                     <view class="rcc">
@@ -44,6 +43,8 @@
                                                         </view>
                                                     </view>
                                                 </navigator>    
+                                            </view>
+
 
                                         </view>
 
@@ -202,120 +203,114 @@
 
 <view>
 
-<view class="coverAll" hidden="{{dialog.visible!=true}}"  catchtouchmove="return"></view>
-<view class="css dialogTip" hidden="{{dialog.visible!=true}}">
-<view class="css b-white br-20"   >
-<view class="cbs" style="flex:1">
-    <view class="rcc">
-         <image class="w-300 h-300" mode="aspectFit" src="{{dialog.tipImg}}"></image>
-    </view>
+    <view class="coverAll" hidden="{{dialog.visible!=true}}"  catchtouchmove="return"></view>
+    <view class="css dialogTip" hidden="{{dialog.visible!=true}}">
+
+        <view class="css b-white br-10"   >
+ 
+            <view class="css p-5vw ">
+                <view class="css pt-70 pb-70">
+                    <view class="rus fs-35 fw-300 line-3-start">{{operateDialog.text}}</view> 
+                </view>
+                <view class="h-3vw"></view>
+                <view class="rbc pl-3vw pr-3vw">
+                    <view></view>
+                    <view class="rcc">
+                        <view class="rcc fs-32 fw-300 c-green"  bindtap="dialog_confirm" >知道了</view>
+                    </view>
+                    
+                </view>
     
-    <view class="css">
-        <view class="rcc fs-40 fw-700 c-tipColor pl-4vw pr-4vw line-3-center">{{dialog.title}}</view>
-        <view class="h-20"></view>
-        <view class="rcc-wrap fs-28 fw-400 c-3  pl-4vw pr-4vw  line-3-center">{{dialog.text}}</view> <view class="h-40"></view>
-    </view>
-    <view></view>
-    <view></view>
-    <view class="rcc pt-50 pb-50">
-        <view class="rcc w-300 h-80 br-80 bTipColor fs-30 fw-400 c-white"  bindtap="dialog_confirm" >知道了</view>
-    </view>
-
-</view>
+            </view>
 
 
-</view>
-<!-- <view class="rcc p-100">
-<image class="w-60 h-60" mode="aspectFit" src="/images/close1.png" bindtap="operateDialog_cancel"></image>
-</view> -->
-</view>
-<view class="rcc tipDialog " hidden="{{tipDialog.visible!=true}}">
-<view class="ccc levelDialog_view">
-<view class="rcc">
-    <image class="tipDialog_image" mode="aspectFit" src="/images/warn.png" wx:if="{{tipDialog.level==='warn'}}"></image>
-    <image class="tipDialog_image" mode="aspectFit" src="/images/error.png" wx:elif="{{tipDialog.level==='error'}}"></image>
-    <image class="tipDialog_image" mode="aspectFit" src="/images/info.png" wx:else></image>
-</view>
-<view style="height:30rpx"></view>
-<view class="rcc levelDialog_text">{{tipDialog.message}}</view>
-</view>
-</view>
-<view class="coverAll" hidden="{{operateDialog.visible!=true}}"  catchtouchmove="return"></view>
-<view class="css dialogTip" hidden="{{operateDialog.visible!=true}}">
-<view class="css b-white br-20"   >
-<!-- <view class="rcc">
-    <view class="rcc absolute ">
-        <image class="w-600 h-400" mode="aspectFit" src="{{operateDialog.tipImg}}"></image>
+        </view>
+ 
+        <!-- <view class="rcc p-100">
+            <image class="w-60 h-60" mode="aspectFit" src="/images/close1.png" bindtap="operateDialog_cancel"></image>
+        </view> -->
     </view>
-</view> -->
-<view class="cbs" style="flex:1">
+    <view class="rcc tipDialog " hidden="{{tipDialog.visible!=true}}">
+        <view class="ccc levelDialog_view">
+            <view class="rcc">
+                <image class="tipDialog_image" mode="aspectFit" src="/images/warn.png" wx:if="{{tipDialog.level==='warn'}}"></image>
+                <image class="tipDialog_image" mode="aspectFit" src="/images/error.png" wx:elif="{{tipDialog.level==='error'}}"></image>
+                <image class="tipDialog_image" mode="aspectFit" src="/images/info.png" wx:else></image>
+            </view>
+            <view style="height:30rpx"></view>
+            <view class="rcc levelDialog_text">{{tipDialog.message}}</view>
+        </view>
+    </view>
+    <view class="coverAll" hidden="{{operateDialog.visible!=true}}"  catchtouchmove="return"></view>
+    <view class="css dialogTip" hidden="{{operateDialog.visible!=true}}">
+        <view class="css b-white br-10"   >
+ 
+            <view class="css p-5vw ">
+                <view class="css pt-70 pb-70">
+                    <view class="rus fs-35 fw-300 line-3-start">{{operateDialog.text}}</view> 
+                </view>
+                <view class="h-3vw"></view>
+                <view class="rbc pl-3vw pr-3vw">
+                    <view></view>
+                    <view class="rcc">
+                        <view class="rcc fs-32 fw-300 c-3"  bindtap="operateDialog_cancel">取消</view> 
+                        <view class="w-70"></view>
+                        <view class="rcc fs-32 fw-300 c-green"  bindtap="operateDialog_confirm" >确定</view>
+                    </view>
+                    
+                </view>
+                <!-- <view class="rcc p-30 fs-25 fw-400 c-3"  bindtap="operateDialog_cancel">知道了</view> -->
+    
+            </view>
+
+
+        </view>
+        <!-- <view class="rcc p-100">
+            <image class="w-60 h-60" mode="aspectFit" src="/images/close1.png" bindtap="operateDialog_cancel"></image>
+        </view> -->
+    </view>
+
+    <view class="cac pageLoadingDialog " hidden="{{pageLoadingDialog.visible!=true}}">
+    <view class="ccc ">
     <view class="rcc">
-        <image class="w-300 h-300" mode="aspectFit" src="{{operateDialog.tipImg}}"></image>
+        <image class="pageLoadingDialog_image" mode="aspectFit" src="/images/load.gif"></image>
     </view>
-    <view class="css">
-        <view class="rcc fs-40 fw-700 c-tipColor pl-4vw pr-4vw line-3-center">{{operateDialog.title}}</view>
-        <view class="h-20"></view>
-        <view class="rcc-wrap fs-28 fw-400 c-3  pl-4vw pr-4vw  line-3-center">{{operateDialog.text}}</view> <view class="h-40"></view>
+    <view class="rcc"></view>
     </view>
-
     <view></view>
-    <view></view>
-
-    <view class="rcc ">
-        <view class="rcc w-250 h-70 br-20 bTipColor fs-25 fw-400 c-white"  bindtap="operateDialog_confirm" >确定</view>
     </view>
-    <view class="rcc p-30 fs-25 fw-400 c-3"  bindtap="operateDialog_cancel">知道了</view>
-
-</view>
-
-
-</view>
-<view class="rcc p-100">
-<image class="w-60 h-60" mode="aspectFit" src="/images/close1.png" bindtap="operateDialog_cancel"></image>
-</view>
-</view>
-
-<view class="cac pageLoadingDialog " hidden="{{pageLoadingDialog.visible!=true}}">
-<view class="ccc ">
-<view class="rcc">
-    <image class="pageLoadingDialog_image" mode="aspectFit" src="/images/load.gif"></image>
-</view>
-<view class="rcc"></view>
-</view>
-<view></view>
-</view>
-<view class="cac pageLoadingDialog " hidden="{{pageLoadingDialogError.visible!=true}}">
-<view></view>
-<view class="ccc ">
-<view class="rcc">
-    <image class="pageLoadingDialog_image" mode="aspectFit" src="/images/errorpage.png"></image>
-</view>
-<view class="rcc"></view>
-</view>
-</view>
-<view catchtouchmove="return" class="coverAll99" hidden="{{labelLoadingDialog.visible!=true}}"></view>
-<view catchtouchmove="return" class="rcc labelLoadingDialog " hidden="{{labelLoadingDialog.visible!=true}}">
-<view class="rcc labelLoadingDialog_view">
-<image class="labelLoadingDialog_image" mode="aspectFill" src="/images/loading.gif"></image>
-<view class="labelLoadingDialog_text">加载中</view>
-</view>
-</view>
-<view class="rcc labelLoadingDialog " hidden="{{labelLoadingDialogSuccess.visible!=true}}">
-<view class="rcc labelLoadingDialog_view">
-<view class="rcc">
-    <image class="labelLoadingDialog_image" mode="aspectFit" src="/images/loadsuccess.png"></image>
-</view>
-<view class="labelLoadingDialog_text">加载成功</view>
-</view>
-</view>
-<view class="rcc labelLoadingDialog " hidden="{{labelLoadingDialogError.visible!=true}}">
-<view class="rcc labelLoadingDialog_view">
-<view class="rcc">
-    <image class="labelLoadingDialog_image" mode="aspectFit" src="/images/loadfail.png"></image>
-</view>
-<view class="labelLoadingDialog_text">加载失败</view>
-</view>
-</view>
+    <view class="cac pageLoadingDialog " hidden="{{pageLoadingDialogError.visible!=true}}">
+    <view></view>
+    <view class="ccc ">
+    <view class="rcc">
+        <image class="pageLoadingDialog_image" mode="aspectFit" src="/images/errorpage.png"></image>
+    </view>
+    <view class="rcc"></view>
+    </view>
+    </view>
+    <view catchtouchmove="return" class="coverAll99" hidden="{{labelLoadingDialog.visible!=true}}"></view>
+    <view catchtouchmove="return" class="rcc labelLoadingDialog " hidden="{{labelLoadingDialog.visible!=true}}">
+    <view class="rcc labelLoadingDialog_view">
+    <image class="labelLoadingDialog_image" mode="aspectFill" src="/images/loading.gif"></image>
+    <view class="labelLoadingDialog_text">加载中</view>
+    </view>
+    </view>
+    <view class="rcc labelLoadingDialog " hidden="{{labelLoadingDialogSuccess.visible!=true}}">
+    <view class="rcc labelLoadingDialog_view">
+    <view class="rcc">
+        <image class="labelLoadingDialog_image" mode="aspectFit" src="/images/loadsuccess.png"></image>
+    </view>
+    <view class="labelLoadingDialog_text">加载成功</view>
+    </view>
+    </view>
+    <view class="rcc labelLoadingDialog " hidden="{{labelLoadingDialogError.visible!=true}}">
+    <view class="rcc labelLoadingDialog_view">
+    <view class="rcc">
+        <image class="labelLoadingDialog_image" mode="aspectFit" src="/images/loadfail.png"></image>
+    </view>
+    <view class="labelLoadingDialog_text">加载失败</view>
+    </view>
+    </view>
 
 
 
