--- a/pages/pk/userCardApply/userCardApply.wxml
+++ b/pages/pk/userCardApply/userCardApply.wxml
@@ -22,7 +22,7 @@
 
                 </view>
                 
-                <view class="rcc fs-40 fw-400 pt-100 pb-100 line-3-center" bindtap="showText" data-text="{{apply.text}}">{{apply.text}}</view>
+                <view class="css pt-100 pb-100"><text class="rcc fs-40 fw-400 line-3-center" bindtap="showText" data-text="{{apply.text}}">{{apply.text}}</text></view>
                 <view class="rbc">
                     <view class="rcc">
                         <view class="rcc">
@@ -55,23 +55,24 @@
             <view class="css b-white br-20 p-3vw">
                 <view class="rbc" >
                                 <view class="rcc">
-                                        <view class="rcc "><image class="rcc w-30 h-30" src="{{apply.lock?'/images/unlock.png':'/images/lock.png'}}" mode="aspectFit"></image></view>
-                                        <view class="w-10"></view>
-                                        <view class="rcc fs-23 fw-300 c-3" >{{apply.lock?'已解锁':'未解锁'}}</view>
+                                    <navigator  class="rcc" hover-class="none" url="/pages/pk/userCard/userCard?userId={{apply.target.userId}}">
+                                        <image class="rcc w-50 h-50 br-50 " src="{{apply.target.imgUrl}}" mode="aspectFill"></image>
+                                    </navigator>
+
                             
                                 </view>
                                 <view class="fs-25 fw-300 c-4">3分钟前</view>
                         
 
                 </view>
-                <view class="css pt-100 pb-100"><view class="rcc fs-40 fw-400 line-3-center" bindtap="showText" data-text="{{apply.text}}">{{apply.text}}</view></view>
+                <view class="css pt-100 pb-100"><text class="rcc fs-40 fw-400 line-3-center" bindtap="showText" data-text="{{apply.text}}">{{apply.text}}</text></view>
                 
                 <view class="rbc">
                     <view class="rcc">
                         
     
                         <view class="rcc">
-                            <navigator class="rcc" hover-class="none" url="/pages/pk/userPublishPost/userPublishPost?userId={{apply.target.userId}}">
+                            <!-- <navigator class="rcc" hover-class="none" url="/pages/pk/userPublishPost/userPublishPost?userId={{apply.target.userId}}">
                                 <image class="rcc w-50 h-50 br-50 " src="{{apply.target.imgUrl}}" mode="aspectFill"></image>
                             </navigator>
                             <view class="w-50"></view>
@@ -83,8 +84,10 @@
                                         
                                             </view>
 
-                            </navigator>
-
+                            </navigator> -->
+                            <view class="rcc "><image class="rcc w-30 h-30" src="{{apply.lock?'/images/unlock.png':'/images/lock.png'}}" mode="aspectFit"></image></view>
+                            <view class="w-10"></view>
+                            <view class="rcc fs-23 fw-300 c-3" >{{apply.lock?'已解锁':'未解锁'}}</view>
                         </view>
 
 
@@ -175,120 +178,114 @@
 
 <view>
 
-<view class="coverAll" hidden="{{dialog.visible!=true}}"  catchtouchmove="return"></view>
-<view class="css dialogTip" hidden="{{dialog.visible!=true}}">
-<view class="css b-white br-20"   >
-<view class="cbs" style="flex:1">
-    <view class="rcc">
-         <image class="w-300 h-300" mode="aspectFit" src="{{dialog.tipImg}}"></image>
-    </view>
+    <view class="coverAll" hidden="{{dialog.visible!=true}}"  catchtouchmove="return"></view>
+    <view class="css dialogTip" hidden="{{dialog.visible!=true}}">
+
+        <view class="css b-white br-10"   >
+ 
+            <view class="css p-5vw ">
+                <view class="css pt-70 pb-70">
+                    <view class="rus fs-35 fw-300 line-3-start">{{operateDialog.text}}</view> 
+                </view>
+                <view class="h-3vw"></view>
+                <view class="rbc pl-3vw pr-3vw">
+                    <view></view>
+                    <view class="rcc">
+                        <view class="rcc fs-32 fw-300 c-green"  bindtap="dialog_confirm" >知道了</view>
+                    </view>
+                    
+                </view>
     
-    <view class="css">
-        <view class="rcc fs-40 fw-700 c-tipColor pl-4vw pr-4vw line-3-center">{{dialog.title}}</view>
-        <view class="h-20"></view>
-        <view class="rcc-wrap fs-28 fw-400 c-3  pl-4vw pr-4vw  line-3-center">{{dialog.text}}</view> <view class="h-40"></view>
-    </view>
-    <view></view>
-    <view></view>
-    <view class="rcc pt-50 pb-50">
-        <view class="rcc w-300 h-80 br-80 bTipColor fs-30 fw-400 c-white"  bindtap="dialog_confirm" >知道了</view>
-    </view>
-
-</view>
+            </view>
 
 
-</view>
-<!-- <view class="rcc p-100">
-<image class="w-60 h-60" mode="aspectFit" src="/images/close1.png" bindtap="operateDialog_cancel"></image>
-</view> -->
-</view>
-<view class="rcc tipDialog " hidden="{{tipDialog.visible!=true}}">
-<view class="ccc levelDialog_view">
-<view class="rcc">
-    <image class="tipDialog_image" mode="aspectFit" src="/images/warn.png" wx:if="{{tipDialog.level==='warn'}}"></image>
-    <image class="tipDialog_image" mode="aspectFit" src="/images/error.png" wx:elif="{{tipDialog.level==='error'}}"></image>
-    <image class="tipDialog_image" mode="aspectFit" src="/images/info.png" wx:else></image>
-</view>
-<view style="height:30rpx"></view>
-<view class="rcc levelDialog_text">{{tipDialog.message}}</view>
-</view>
-</view>
-<view class="coverAll" hidden="{{operateDialog.visible!=true}}"  catchtouchmove="return"></view>
-<view class="css dialogTip" hidden="{{operateDialog.visible!=true}}">
-<view class="css b-white br-20"   >
-<!-- <view class="rcc">
-    <view class="rcc absolute ">
-        <image class="w-600 h-400" mode="aspectFit" src="{{operateDialog.tipImg}}"></image>
+        </view>
+ 
+        <!-- <view class="rcc p-100">
+            <image class="w-60 h-60" mode="aspectFit" src="/images/close1.png" bindtap="operateDialog_cancel"></image>
+        </view> -->
     </view>
-</view> -->
-<view class="cbs" style="flex:1">
+    <view class="rcc tipDialog " hidden="{{tipDialog.visible!=true}}">
+        <view class="ccc levelDialog_view">
+            <view class="rcc">
+                <image class="tipDialog_image" mode="aspectFit" src="/images/warn.png" wx:if="{{tipDialog.level==='warn'}}"></image>
+                <image class="tipDialog_image" mode="aspectFit" src="/images/error.png" wx:elif="{{tipDialog.level==='error'}}"></image>
+                <image class="tipDialog_image" mode="aspectFit" src="/images/info.png" wx:else></image>
+            </view>
+            <view style="height:30rpx"></view>
+            <view class="rcc levelDialog_text">{{tipDialog.message}}</view>
+        </view>
+    </view>
+    <view class="coverAll" hidden="{{operateDialog.visible!=true}}"  catchtouchmove="return"></view>
+    <view class="css dialogTip" hidden="{{operateDialog.visible!=true}}">
+        <view class="css b-white br-10"   >
+ 
+            <view class="css p-5vw ">
+                <view class="css pt-70 pb-70">
+                    <view class="rus fs-35 fw-300 line-3-start">{{operateDialog.text}}</view> 
+                </view>
+                <view class="h-3vw"></view>
+                <view class="rbc pl-3vw pr-3vw">
+                    <view></view>
+                    <view class="rcc">
+                        <view class="rcc fs-32 fw-300 c-3"  bindtap="operateDialog_cancel">取消</view> 
+                        <view class="w-70"></view>
+                        <view class="rcc fs-32 fw-300 c-green"  bindtap="operateDialog_confirm" >确定</view>
+                    </view>
+                    
+                </view>
+                <!-- <view class="rcc p-30 fs-25 fw-400 c-3"  bindtap="operateDialog_cancel">知道了</view> -->
+    
+            </view>
+
+
+        </view>
+        <!-- <view class="rcc p-100">
+            <image class="w-60 h-60" mode="aspectFit" src="/images/close1.png" bindtap="operateDialog_cancel"></image>
+        </view> -->
+    </view>
+
+    <view class="cac pageLoadingDialog " hidden="{{pageLoadingDialog.visible!=true}}">
+    <view class="ccc ">
     <view class="rcc">
-        <image class="w-300 h-300" mode="aspectFit" src="{{operateDialog.tipImg}}"></image>
+        <image class="pageLoadingDialog_image" mode="aspectFit" src="/images/load.gif"></image>
     </view>
-    <view class="css">
-        <view class="rcc fs-40 fw-700 c-tipColor pl-4vw pr-4vw line-3-center">{{operateDialog.title}}</view>
-        <view class="h-20"></view>
-        <view class="rcc-wrap fs-28 fw-400 c-3  pl-4vw pr-4vw  line-3-center">{{operateDialog.text}}</view> <view class="h-40"></view>
+    <view class="rcc"></view>
     </view>
-
     <view></view>
-    <view></view>
-
-    <view class="rcc ">
-        <view class="rcc w-250 h-70 br-20 bTipColor fs-25 fw-400 c-white"  bindtap="operateDialog_confirm" >确定</view>
     </view>
-    <view class="rcc p-30 fs-25 fw-400 c-3"  bindtap="operateDialog_cancel">知道了</view>
-
-</view>
-
-
-</view>
-<view class="rcc p-100">
-<image class="w-60 h-60" mode="aspectFit" src="/images/close1.png" bindtap="operateDialog_cancel"></image>
-</view>
-</view>
-
-<view class="cac pageLoadingDialog " hidden="{{pageLoadingDialog.visible!=true}}">
-<view class="ccc ">
-<view class="rcc">
-    <image class="pageLoadingDialog_image" mode="aspectFit" src="/images/load.gif"></image>
-</view>
-<view class="rcc"></view>
-</view>
-<view></view>
-</view>
-<view class="cac pageLoadingDialog " hidden="{{pageLoadingDialogError.visible!=true}}">
-<view></view>
-<view class="ccc ">
-<view class="rcc">
-    <image class="pageLoadingDialog_image" mode="aspectFit" src="/images/errorpage.png"></image>
-</view>
-<view class="rcc"></view>
-</view>
-</view>
-<view catchtouchmove="return" class="coverAll99" hidden="{{labelLoadingDialog.visible!=true}}"></view>
-<view catchtouchmove="return" class="rcc labelLoadingDialog " hidden="{{labelLoadingDialog.visible!=true}}">
-<view class="rcc labelLoadingDialog_view">
-<image class="labelLoadingDialog_image" mode="aspectFill" src="/images/loading.gif"></image>
-<view class="labelLoadingDialog_text">加载中</view>
-</view>
-</view>
-<view class="rcc labelLoadingDialog " hidden="{{labelLoadingDialogSuccess.visible!=true}}">
-<view class="rcc labelLoadingDialog_view">
-<view class="rcc">
-    <image class="labelLoadingDialog_image" mode="aspectFit" src="/images/loadsuccess.png"></image>
-</view>
-<view class="labelLoadingDialog_text">加载成功</view>
-</view>
-</view>
-<view class="rcc labelLoadingDialog " hidden="{{labelLoadingDialogError.visible!=true}}">
-<view class="rcc labelLoadingDialog_view">
-<view class="rcc">
-    <image class="labelLoadingDialog_image" mode="aspectFit" src="/images/loadfail.png"></image>
-</view>
-<view class="labelLoadingDialog_text">加载失败</view>
-</view>
-</view>
+    <view class="cac pageLoadingDialog " hidden="{{pageLoadingDialogError.visible!=true}}">
+    <view></view>
+    <view class="ccc ">
+    <view class="rcc">
+        <image class="pageLoadingDialog_image" mode="aspectFit" src="/images/errorpage.png"></image>
+    </view>
+    <view class="rcc"></view>
+    </view>
+    </view>
+    <view catchtouchmove="return" class="coverAll99" hidden="{{labelLoadingDialog.visible!=true}}"></view>
+    <view catchtouchmove="return" class="rcc labelLoadingDialog " hidden="{{labelLoadingDialog.visible!=true}}">
+    <view class="rcc labelLoadingDialog_view">
+    <image class="labelLoadingDialog_image" mode="aspectFill" src="/images/loading.gif"></image>
+    <view class="labelLoadingDialog_text">加载中</view>
+    </view>
+    </view>
+    <view class="rcc labelLoadingDialog " hidden="{{labelLoadingDialogSuccess.visible!=true}}">
+    <view class="rcc labelLoadingDialog_view">
+    <view class="rcc">
+        <image class="labelLoadingDialog_image" mode="aspectFit" src="/images/loadsuccess.png"></image>
+    </view>
+    <view class="labelLoadingDialog_text">加载成功</view>
+    </view>
+    </view>
+    <view class="rcc labelLoadingDialog " hidden="{{labelLoadingDialogError.visible!=true}}">
+    <view class="rcc labelLoadingDialog_view">
+    <view class="rcc">
+        <image class="labelLoadingDialog_image" mode="aspectFit" src="/images/loadfail.png"></image>
+    </view>
+    <view class="labelLoadingDialog_text">加载失败</view>
+    </view>
+    </view>
 
 
 
