--- a/pages/pk/singleLocation/singleLocation.wxml
+++ b/pages/pk/singleLocation/singleLocation.wxml
@@ -11,23 +11,18 @@
   <view class="rcs " style="height:{{top}}px"></view>
   <view class="rcs " style="height:32px">
 
-      <view class="rcc h-32px ">
-          <!-- <image class="h-40 w-40" mode="aspectFit" src="/images/daka.png"></image> -->
+      <view class="rcc h-32px z10" bindtap="back">
+          <image class="h-30 w-30" mode="aspectFit" src="/images/back.png"></image>
           <view class="fs-30 fw-700 c-4 f-shadow3">{{mode===0?'搜索卡点':'创建卡点'}}</view>
       </view>
 
   </view>
   <view class="rcs " style="height:{{top}}px"></view>
 </view>
-<!-- 按钮 -->
-<view class="ccc chooseLocation z4">
-      
-</view>
-<view class="ccc chooseLocation1 z4">
-  
-</view>
+
+
 <!-- 距离 -->
-<view class="rcc z4" style="position: fixed;left:0;top:{{top}}px;width:100vw;height:32px">
+<view class="rcc z4" style="position: fixed;left:20vw;top:{{top}}px;width:60vw;height:32px">
     <view class="rcc pl-40 pr-40 br-20 b-publish " style="height:32px">
         <!-- <view></view> -->
         <view class="c-white fs-25 fw-700">距离{{lengthStr}}</view>
@@ -289,7 +284,7 @@
  
             <view class="css p-5vw ">
                 <view class="css pt-70 pb-70">
-                    <view class="rus fs-35 fw-300 line-3-start">{{operateDialog.text}}</view> 
+                    <view class="rus fs-35 fw-300 line-3-start">{{dialog.text}}</view> 
                 </view>
                 <view class="h-3vw"></view>
                 <view class="rbc pl-3vw pr-3vw">
