--- a/pages/pk/userCard/userCard.wxml
+++ b/pages/pk/userCard/userCard.wxml
@@ -28,10 +28,10 @@
                                     <view class="w-10"></view>
                                     <view class="fs-25 fw-400">上传</view>
                                 </view>
-                                <view wx:else class="rcc" bindtap="apply">
+                                <view wx:else class="rcc" bindtap="{{userCard.unLock?'':'apply'}}">
                                     <image class="w-40 h-40" mode="aspectFit" src="/images/unlock.png" ></image>
                                     <view class="w-10"></view>
-                                    <view class="fs-25 fw-400">解锁</view>
+                                    <view class="fs-25 fw-400">{{userCard.unLock?'已解锁':'解锁'}}</view>
                                 </view>
 
                                 
@@ -146,7 +146,7 @@
  
             <view class="css p-5vw ">
                 <view class="css pt-70 pb-70">
-                    <view class="rus fs-35 fw-300 line-3-start">{{operateDialog.text}}</view> 
+                    <view class="rus fs-35 fw-300 line-3-start">{{dialog.text}}</view> 
                 </view>
                 <view class="h-3vw"></view>
                 <view class="rbc pl-3vw pr-3vw">
