--- a/pages/pk/locationApprovingImages/locationApprovingImages.wxml
+++ b/pages/pk/locationApprovingImages/locationApprovingImages.wxml
@@ -45,7 +45,7 @@
     </view>
     <view wx:else class="ccc "  style="flex:1">
         <view class="rcc">
-            <image class="h-400 w-400" mode="aspectFit" src="{{emptyImage}}" ></image>
+            <image class="h-400 w-400" mode="aspectFit" src="/images/img.png" ></image>
         </view>
         <view class="fs-30 fw-300 c-3">暂无图片</view>
     </view>
@@ -96,7 +96,7 @@
  
             <view class="css p-5vw ">
                 <view class="css pt-70 pb-70">
-                    <view class="rus fs-35 fw-300 line-3-start">{{operateDialog.text}}</view> 
+                    <view class="rus fs-35 fw-300 line-3-start">{{dialog.text}}</view> 
                 </view>
                 <view class="h-3vw"></view>
                 <view class="rbc pl-3vw pr-3vw">
