--- a/pages/pk/uploadImgs/uploadImgs.wxml
+++ b/pages/pk/uploadImgs/uploadImgs.wxml
@@ -9,12 +9,16 @@
       <view class="rcs " style="height:20px"></view>
     </view>
     <view class="css pr-3vw pl-3vw">
-        <view wx:if="{{imgs&&imgs.length>0}}" class="css p-20 " >
-            <textarea adjustPosition="true" bindinput="_input" class=" h-200 fs-35 fw-400" cursorSpacing="50" fixed="true" maxlength="{{maxLength}}" placeholder="说点什么..." value="{{text}}"></textarea>
+        <view wx:if="{{imgs&&imgs.length>0}}" class="css p-2vw " >
+            <view class="css">
+                <textarea adjustPosition="true" bindinput="_input" class="h-200 fs-35 fw-400" style="width:90vw"  cursorSpacing="50" fixed="true" maxlength="{{maxLength}}" placeholder="说点什么..." value="{{text}}"></textarea>
+            </view>
         </view>
         <view wx:else class="csc b-timepage br-20" style="background-color:#{{currentBack.backColor}}" >
             <view class="csc h-400 p-5vw" style="background-position: center;background-image: url({{currentBack.backUrl}});background-repeat: no-repeat;background-size: 100% auto;" >
-                <textarea adjustPosition="true" bindinput="_input" auto-height="true" class=" fs-35 fw-700" style="width:84vw;text-align:center;color:#{{currentBack.fontColor}}" cursorSpacing="50" fixed="true" maxlength="{{maxLength}}" placeholder="说点什么..." value="{{text}}"></textarea>
+                <view class="css p-2vw">
+                    <textarea adjustPosition="true" bindinput="_input" auto-height="true" class=" fs-40 fw-700" style="width:80vw;text-align:center;color:#{{currentBack.fontColor}}" cursorSpacing="50" fixed="true" maxlength="{{maxLength}}" placeholder="说点什么..." value="{{text}}"></textarea>
+                </view>
             </view>
         </view>
 
@@ -31,7 +35,7 @@
                         
                         <view class="rcc h-15vw" >
                             <view class="rcc br-10" style="background-color:#{{textBack.backColor}}">
-                                <view class=" br-10 {{currentBack.backId === textBack.backId?'border24 box8 h-8vw w-8vw':'h-10vw w-10vw'}}"  style="background-position: center;background-image: url({{textBack.backUrl}});background-repeat: no-repeat;background-size: 100% auto;"   bindtap="select" data-back="{{textBack}}" ></view>
+                                <view class=" br-10 {{currentBack.backId === textBack.backId?'border24 box8 h-8vw w-8vw':'h-10vw w-10vw'}}"  style="background-position: center;background-image: url({{textBack.backUrl}}?x-oss-process=image/resize,w_100,m_lfit);background-repeat: no-repeat;background-size: 100% auto;"   bindtap="select" data-back="{{textBack}}" ></view>
                             </view>
                             
                         </view>
@@ -136,7 +140,7 @@
  
             <view class="css p-5vw ">
                 <view class="css pt-70 pb-70">
-                    <view class="rus fs-35 fw-300 line-3-start">{{operateDialog.text}}</view> 
+                    <view class="rus fs-35 fw-300 line-3-start">{{dialog.text}}</view> 
                 </view>
                 <view class="h-3vw"></view>
                 <view class="rbc pl-3vw pr-3vw">
