--- a/pages/pk/userFind/userFind.wxml
+++ b/pages/pk/userFind/userFind.wxml
@@ -158,18 +158,16 @@
         </view>
         <view class="css p-3vw">
             <view class="rcs fs-30 fw-700 c-white">温馨提示:</view>
-            <view class="rss">
-                <view class="rus fs-23 fw-300 c-white">1.</view>
-                <view class="rus fs-23 fw-300 c-white">黑洞是现代广义相对论中，存在于宇宙空间中的一种天体。黑洞的引力极其强脱的天体”。</view>
-            </view>
-            <view class="rss">
-                <view class="rus fs-23 fw-300 c-white">2.</view>
-                <view class="rus fs-25 fw-300 c-white">1916年，德国天文学家卡尔·史瓦西通过计算得到了爱因斯坦场方程的一个真空解，这个解表明，为“黑洞”。</view>
-            </view>
-            <view class="rss">
-                <view class="rus fs-23 fw-300 c-white">3.</view>
-                <view class="rus fs-23 fw-300 c-white">黑洞无法直接观测，但可以借由间接方式得知其存在与质量，并且观测到它对其他事物的影响。。</view>
-            </view>
+
+            <block wx:for="{{tips}}" wx:for-index="bindex" wx:for-item="tip" >
+                <view class="rss">
+                    <view class="rus fs-25 fw-300 c-white">{{bindex+1}}.</view>
+                    <view class="rus fs-25 fw-300 c-white">{{tip.tip}}</view>
+                </view>
+            </block>
+
+
+
         </view>
 
     </view>
